--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "timestamp",
   "version": "1.0.0",
   "description": "timestamp microservice",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
